--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,8 @@
 .menu button {
   height: 50px;
   width: 80px;
-  margin-right: 30px;
+  margin-right: 15px;
+  margin-left: 15px;
   font-size: 20px;
   border-radius: 8px;
   background-color: rgb(179, 115, 31);
